# pytest_selenium_project

./: README.md  pyproject.toml
pages/: base_page.py  item_page.py  locators.py  login_page.py  main_page.py
tests/: conftest.py  test_item_page.py  test_main_page.py
