[tool.poetry]
name = "pytest-selenium-project"
version = "0.1.0"
description = ""
authors = ["Pavel Sergeev <pavel.al.sergeev@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_selenium_project"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.2"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
isort = "^5.12.0"
flake8-broken-line = "^0.6.0"
flake8-isort = "^6.0.0"
flake8-plugin-utils = "^1.3.2"
flake8-return = "^1.2.0"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
